chore: code cleanup